--- a/GanttChartLightLibraryDemos/Demos/Demos.csproj
+++ b/GanttChartLightLibraryDemos/Demos/Demos.csproj
@@ -72,22 +72,6 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DlhSoft.HierarchicalData.LightWPF.Controls, Version=4.0.8.5, Culture=neutral, PublicKeyToken=6071b28da0134838, processorArchitecture=MSIL">
-      <HintPath>..\packages\DlhSoft.HierarchicalDataLightLibrary.4.0.9\lib\net45\DlhSoft.HierarchicalData.LightWPF.Controls.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="DlhSoft.OrganizationalChartLibrary.Controls, Version=4.0.8.5, Culture=neutral, PublicKeyToken=6071b28da0134838, processorArchitecture=MSIL">
-      <HintPath>..\packages\DlhSoft.HierarchicalDataLightLibrary.4.0.9\lib\net45\DlhSoft.OrganizationalChartLibrary.Controls.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="DlhSoft.ProjectData.GanttChart.LightWPF.Controls, Version=4.3.36.0, Culture=neutral, PublicKeyToken=6071b28da0134838, processorArchitecture=MSIL">
-      <HintPath>..\packages\DlhSoft.GanttChartLightLibrary.4.3.36\lib\net45\DlhSoft.ProjectData.GanttChart.LightWPF.Controls.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="DlhSoft.ProjectData.PertChart.LightWPF.Controls, Version=4.3.36.0, Culture=neutral, PublicKeyToken=6071b28da0134838, processorArchitecture=MSIL">
-      <HintPath>..\packages\DlhSoft.GanttChartLightLibrary.4.3.36\lib\net45\DlhSoft.ProjectData.PertChart.LightWPF.Controls.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -108,15 +92,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\EditItemDialog.xaml.cs">
-      <DependentUpon>EditItemDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -129,35 +104,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <None Include="packages.config" />
-    <None Include="Samples\Templates.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Samples\Themes.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <Page Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\EditItemDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Templates.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Themes.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -203,62 +149,22 @@
     <Resource Include="Properties\Icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\AddNew.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Baseline.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Copy.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\CriticalPath.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\DecreaseIndentation.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\DecreaseTimelinePage.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Delete.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\DependencyConstraints.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Edit.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\ExportImage.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\FitToTimelinePage.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\IncreaseIndentation.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\IncreaseTimelinePage.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\InsertNew.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\LevelResources.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\LoadChart.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\LoadProjectXml.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\MoveDown.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\MoveUp.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\NetworkDiagram.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Paste.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\PertChart.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Print.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\ProjectStatistics.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Redo.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Resources.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\SaveProjectXml.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\ScheduleChart.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\SetColor.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\ShowWeekends.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\SplitRemainingWork.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Task.Icon.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\Undo.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\WorkOnWeekends.png" />
-    <Resource Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\Images\ZoomIn.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Tools\ArchiveBuilder.exe" />
     <None Include="Tools\Interop.Shell32.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Samples\Silverlight-CSharp\GanttChartDataGrid\" />
-    <Folder Include="Samples\Silverlight-VisualBasic\GanttChartDataGrid\" />
-    <Folder Include="Samples\WPF-CSharp\GanttChartView\" />
-    <Folder Include="Samples\WPF-CSharp\LoadChartDataGrid\" />
-    <Folder Include="Samples\WPF-CSharp\LoadChartView\" />
-    <Folder Include="Samples\WPF-CSharp\NetworkDiagramView\" />
-    <Folder Include="Samples\WPF-CSharp\PertChartView\" />
-    <Folder Include="Samples\WPF-CSharp\ScheduleChartDataGrid\" />
-    <Folder Include="Samples\WPF-CSharp\ScheduleChartView\" />
-    <Folder Include="Samples\WPF-VisualBasic\GanttChartDataGrid\" />
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Samples\WPF-CSharp\GanttChartDataGrid\MainFeatures\MainFeatures.csproj">
+      <Project>{326967b5-0af7-4aa0-a4b9-70abb105142d}</Project>
+      <Name>MainFeatures</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>for /d %25%25t in ("$(ProjectDir)\Samples\*") do for /d %25%25c in ("%25%25t\*") do for /d %25%25f in ("%25%25c\*") do xcopy /y "$(ProjectDir)\Samples\*.*" "%25%25f\"
-</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>for /d %25%25t in ("$(ProjectDir)\Samples\*") do for /d %25%25c in ("%25%25t\*") do for /d %25%25f in (%25%25c\*) do rd /s /q %25%25f\obj
